@@ -1,3 +1,8 @@
+2010-04-03  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* ecrt0.c: Remove MSDOS, m68k and __sparc__ conditionals, file not
+	used on those platforms.
+
 2010-04-02  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	Remove extern errno declarations.
